--- a/CPPTest/CPPTest.vcxproj.filters
+++ b/CPPTest/CPPTest.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="PalindromeInt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VectorTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
